<resources>
    <string name="app_name">Verification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_logs">LogsActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="title_activity_devices_tab">DevicesTab</string>
    <string name="title_activity_tokens_tab">TokensTab</string>
    <string name="title_activity_logs_tab">LogsTab</string>
    <string name="device_status_verification">Device status verification</string>
    <string name="status">STATUS</string>
    <string name="log">LOGS</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="device_name">Device name</string>
    <string name="settings">SETTINGS</string>
    <string name="exit">EXIT</string>
    <string name="delete_number">Delete number</string>
    <string name="clear_phone_table">Clear phone list</string>
    <string name="clear_devices">Clear device list</string>
    <string name="delete_device">Delete device</string>
    <string name="add_device">Add device</string>
    <string name="generate_new_set">Generate new set</string>
    <string name="change_token_usage">Change token usage</string>
    <string name="send_logs">Send logs via SMS</string>
    <string name="clear_logs">Clear logs</string>
    <string name="info_header_1">Appication used to mark statuses of declared devices\n</string>
    <string name="info_header_2">There is possibility to delcare device and change\n its status\n</string>
    <string name="info_header_3">Every change creates simple log containing informations about status and time\n</string>
    <string name="info_header_4">During status change log wil be send to the declared phone number\n</string>
</resources>
